Changed two references to ManageIQ to the product-title attribute.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -1893,8 +1893,8 @@ Table: workers
 |password|Stores password for destination database in encrypted format.
 |host|Host of the destination database.
 |port|Port of the destination database. Default: 5432
-|include_tables|Lists tables included in the replication. Do NOT modify unless specifically instructed to do so by ManageIQ support. Default: include all, exclude_tables is used instead.
-|exclude_tables|Lists tables not to be included in the replication. Do NOT modify unless specifically instructed to do so by ManageIQ support.
+|include_tables|Lists tables included in the replication. Do NOT modify unless specifically instructed to do so by {product-title} support. Default: include all, exclude_tables is used instead.
+|exclude_tables|Lists tables not to be included in the replication. Do NOT modify unless specifically instructed to do so by {product-title} support.
 |options|
 |replication_trace|Set to true to capture all replication tracing in the log. Default: false
 |schedule_worker|Settings for Scheduler Server Role and any other work that runs on a schedule. Parameters specified here will override those set in the worker_base:default section.
