Added a new section on Importing a Domain via Git

--- a/doc-Scripting_Actions/topics/chap_automation_model.adoc
+++ b/doc-Scripting_Actions/topics/chap_automation_model.adoc
@@ -11,6 +11,8 @@ include::Editing_a_Domain.adoc[]
 
 include::Deleting_a_Domain.adoc[]
 
+include::Importing_a_Domain.adoc[]
+
 include::Changing_Priority_Order_of_Domains.adoc[]
 
 include::Creating_a_Namespace.adoc[]
