add login instructions to installation guides

--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -15,5 +15,4 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 include::topics/installation.adoc[]
 include::topics/configuration.adoc[]
-
-
+include::common/logging_into_cloudforms.adoc[]
