--- a/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/cfme/master.adoc
@@ -15,4 +15,4 @@ include::common/attributes/cfme.adoc[]
 :numbered:
 include::topics/installation.adoc[]
 include::topics/configuration.adoc[]
-
+include::common/logging_into_cloudforms.adoc[]
