--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
@@ -17,7 +17,4 @@ include::topics/installation.adoc[]
 
 [[Installation]]
 include::/common/configuration.adoc[]
-
-
-
-
+include::common/logging_into_cloudforms.adoc[]
