[api] API v2.3.0 Documentation
- Updated Versioning page to talk about v2.3.0 and its features
- /api/automate model queries
- /api/automate_domains queries and related actions
- OPTIONS on /api/:collection for fetching collection metadata
- Service Power operations
- Picture Creation via /api/pictures
- Deleting Service Dialogs
- Bulk Queries
- /api/notifications Support
- /api/blueprints Support and Tagging
- Provider custom attributes
- Entrypoint Details
- /api/arbitration_profiles CRUD
- /api/arbitration_rules CRUD
- /api/arbitration_settings CRUD
- /api/virtual_templates Queries
- Cloud Networks subcollection of Providers
- Service Creation
- /api/orchestration_templates CRUD
- Renamed/Removed Deprecated Attributes
- Approving/Denying service requests
- /api/requests Create/Edit/Approve/Deny

--- a/api/appendices/quick_reference.adoc
+++ b/api/appendices/quick_reference.adoc
@@ -45,7 +45,7 @@ of the REST API.
 |Querying Capability |Query Parameters
 |Paging |offset, limit
 |Sorting |sort_by=attr, sort_order=asc\|desc
-|Filtering |filter[]="..."
+|Filtering |filter[]=...
 |Querying by Tag |i.e. by_tag=/department/finance
 |Expanding Results |expand=<what>, i.e.  expand=resources,tags,service_templates,...
 |Selecting Attributes |attributes=<attr1>,<attr2>,... i.e.  attributes=id,name,type,...
