--- a/api/examples/queries.adoc
+++ b/api/examples/queries.adoc
@@ -27,7 +27,7 @@ GET /api/vms?expand=resources&attributes=name,vendor
 === Query VMs named sample* and return name and vendor
 
 ----
-GET /api/vms?expand=resources&attributes=name,vendor&filter[]="name='sample%'"
+GET /api/vms?expand=resources&attributes=name,vendor&filter[]=name='sample%'
 ----
 
 [[query-vms-but-only-return-the-first-500]]
@@ -48,7 +48,7 @@ GET /api/vms?offset=500&limit=500
 === Query first 1000 VMs, named test*, get name, vendor and guid and sort by name in ascending order
 
 ----
-GET /api/vms?offset=0&limit=1000&filter[]="name='test%'"
+GET /api/vms?offset=0&limit=1000&filter[]=name='test%'
     &expand=resources&attributes=name,vendor,guid
     &sort_by=name&sort_order=asc
 ----
