--- a/api/overview/query.adoc
+++ b/api/overview/query.adoc
@@ -50,10 +50,10 @@ paged request.
 *GET* requests against collections support the following query parameters to enable filtering:
 
 * *filter*: The filter to use for querying the collection, i.e.
-filter[]="name='myservice%'".
+filter[]=name='myservice%'.
 
 ----
-GET /api/:collection?filter[]="name='myservice%'"
+GET /api/:collection?filter[]=name='myservice%'
 ----
 
 For more information on filter[] please reference the 
