--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -5,6 +5,24 @@
 [cols="1,1,1,3",options="header"]
 |=======================================================================
 |API Version |Entrypoints |Published |Description
+|*2.3.0* |/api, /api/v2.3.0 |December 2016 |Automate Collection,
+Automate Domains Collection, Automate Domain refresh_from_source,
+Collection OPTIONS and metadata,
+Service Power Operations,
+Picture Create action,
+Delete Service Dialogs,
+Bulk Queries,
+CRUD on Notifications,
+Blueprint Collection, CRUD, publishing, and Tagging,
+Custom Attributes on Providers,
+Additional Server information provided in API Entrypoint,
+CRUD on Arbitration Profiles,
+CRUD on Arbitration Rules,
+CRUD on Arbitration Settings,
+Queries of Virtual Templates,
+Cloud Networks subcollection for Providers,
+Service Create action,
+CRUD on Orchestration Templates
 |*2.2.0* |/api, /api/v2.2.0 |June 2016 |CRUD on Groups,
 CRUD on Users,
 Updating a Host password,
