--- a/api/reference/tagging.adoc
+++ b/api/reference/tagging.adoc
@@ -223,14 +223,19 @@ of resources. Tags can be managed as subcollections of the following primary col
 [cols="<",options="header",width="50%"]
 |===========================
 | Collection
-| /api/providers
-| /api/hosts
-| /api/data_stores
-| /api/resource_pools
+| /api/blueprints
+| /api/categories
 | /api/clusters
+| /api/data_stores
+| /api/groups
+| /api/hosts
+| /api/providers
+| /api/resource_pools
 | /api/services
 | /api/service_templates
+| /api/templates
 | /api/tenants
+| /api/users
 | /api/vms
 |===========================
 
