--- a/api/reference/collections.adoc
+++ b/api/reference/collections.adoc
@@ -11,13 +11,19 @@ GET /api/:collection
 
 Where :collection is one of the following:
 
-[cols="<,<",options="header",]
+[cols="1<,2<",options="header",width="60%"]
 |=============================================================
 |Collection | Description
+|arbitration_profiles | Arbitration Profiles
+|arbitration_rules | Arbitration Rules
+|arbitration_settings | Arbitration Settings
+|automate | Automate Model
 |automation_requests | Automation Requests
 |availability_zones | Availability Zones
+|blueprints | Blueprints
 |categories | Categories
 |chargebacks | Chargebacks
+|cloud_networks | Cloud Networks
 |clusters | Clusters
 |conditions | Conditions
 |currencies | Currencies
@@ -29,6 +35,7 @@ Where :collection is one of the following:
 |hosts | Hosts
 |instances | Instances
 |measures | Measures
+|notifications | Notifications
 |pictures | Pictures
 |policies | Policies
 |policy_actions | Actions
@@ -57,6 +64,7 @@ Where :collection is one of the following:
 |templates | Templates
 |tenants | Tenants
 |users | Users
+|virtual_templates | Virtual Templates
 |vms | Virtual Machines
 |zones | Zones
 |=============================================================
