--- a/api/reference/provider_custom_attributes.adoc
+++ b/api/reference/provider_custom_attributes.adoc
@@ -1,35 +1,35 @@
 
-[[custom-attributes]]
-== Custom Attributes
+[[provider-custom-attributes]]
+== Provider Custom Attributes
 
-Custom Attributes can be managed for Virtual Machines. This is done via the
+Custom Attributes can be managed for Providers. This is done via the
 custom_attributes sub-collection as follows:
 
 [source,data]
 ----
-/api/vms/:id/custom_attributes
+/api/providers/:id/custom_attributes
 ----
 
-* link:#querying-custom-attributes[Querying Custom Attributes]
+* link:#querying-provider-custom-attributes[Querying Provider Custom Attributes]
 * link:#specifying-custom-attributes[Specifying Custom Attributes]
 * link:#custom-attribute-actions[Custom Attribute Actions]
-* link:#add-custom-attributes[Adding Custom Attributes]
-* link:#edit-custom-attributes[Editing Custom Attributes]
-* link:#delete-custom-attributes[Deleting Custom Attributes]
+* link:#add-provider-custom-attributes[Adding Provider Custom Attributes]
+* link:#edit-provider-custom-attributes[Editing Provider Custom Attributes]
+* link:#delete-provider-custom-attributes[Deleting Provider Custom Attributes]
 
-[[querying-custom-attributes]]
-=== Querying Custom Attributes
+[[querying-provider-custom-attributes]]
+=== Querying Provider Custom Attributes
 
-Custom attributes of a VM can be asked for by expanding the subcollection as follows:
-
-----
-GET /api/vms/:id?expand=custom_attributes
-----
-
-Optionally, just the custom attributes of a VMs can be queried:
+Custom attributes of a Provider can be asked for by expanding the subcollection as follows:
 
 ----
-GET /api/vms/:id/custom_attributes
+GET /api/providers/:id?expand=custom_attributes
+----
+
+Optionally, just the custom attributes of a Provider can be queried:
+
+----
+GET /api/providers/:id/custom_attributes
 ----
 
 [[specifying-attribute-actions]]
@@ -42,15 +42,11 @@ Custom attributes are specified as follows:
 {
   "name" : "...",
   "value" : "...",
-  "source" : "...",
-  "section" : "...",
+  "section" : "..."
 }
 ----
 
 For adding custom attributes, *name* field is required.
-
-If omitted, *source* will be set to *EVM*.  If *source* is set to *VC*,
-the custom attribute field will be updated on the provider.
 
 For editing a custom attribute, specify the custom attribute either by *name*:
 
@@ -67,7 +63,7 @@ Or by *href*:
 [source,json]
 ----
 {
-  "href" : "http://localhost:3000/api/vms/:id/custom_attributes/:id",
+  "href" : "http://localhost:3000/api/providers/:id/custom_attributes/:id",
   "value" : "..."
 }
 ----
@@ -78,18 +74,18 @@ Or by *href*:
 [cols="1,3",options="header",width="60%"]
 |=====================
 | Action | Description
-| add | Adding Custom Attributes to a VM
-| edit | Editing Custom Attributes of a VM
-| delete | Deleting Custom Attributes from a VM
+| add | Adding Custom Attributes to a Provider
+| edit | Editing Custom Attributes of a Provider
+| delete | Deleting Custom Attributes from a Provider
 |=====================
 
-[[add-custom-attributes]]
-=== Adding Custom Attributes
+[[add-provider-custom-attributes]]
+=== Adding Provider Custom Attributes
 
-Adding custom attributes to a VM:
+Adding custom attributes to a Provider:
 
 ----
-POST /api/vms/:id/custom_attributes
+POST /api/providers/:id/custom_attributes
 ----
 
 [source,json]
@@ -118,13 +114,13 @@ For example, adding two custom attributes:
 ----
 
 
-[[edit-custom-attributes]]
-=== Editing Custom Attributes
+[[edit-provider-custom-attributes]]
+=== Editing Provider Custom Attributes
 
-Editing custom attributes of a VM:
+Editing custom attributes of a Provider:
 
 ----
-POST /api/vms/:id/custom_attributes
+POST /api/providers/:id/custom_attributes
 ----
 
 [source,json]
@@ -152,13 +148,13 @@ For example:
 }
 ----
 
-[[delete-custom-attributes]]
-=== Deleting Custom Attributes
+[[delete-provider-custom-attributes]]
+=== Deleting Provider Custom Attributes
 
-Deleting custom attributes of a VM:
+Deleting custom attributes of a Provider:
 
 ----
-POST /api/vms/:id/custom_attributes
+POST /api/providers/:id/custom_attributes
 ----
 
 [source,json]
@@ -174,7 +170,7 @@ POST /api/vms/:id/custom_attributes
 ----
 
 
-In the following example, a request to delete custom attributes of a VM by name and by href:
+In the following example, a request to delete custom attributes of a Provider by name and by href:
 
 [source,json]
 ----
@@ -182,7 +178,7 @@ In the following example, a request to delete custom attributes of a VM by name 
   "action" : "edit",
   "resources" : [
     { "name" : "ca_name1" },
-    { "href" : "http://localhost:3000/api/vms/:id/custom_attributes/:id" }
+    { "href" : "http://localhost:3000/api/providers/:id/custom_attributes/:id" }
   ]
 }
 ----
