added notes about RHV restrictions from SME review

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_VM_disk.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_VM_disk.adoc
@@ -1,7 +1,7 @@
 [[Adding_a_VM_disk]]
-= Adding a Disk to a Virtual Machine (VMware Virtual Machines Only)
+= Adding a Disk to a Virtual Machine
 
-A disk can be added to a VMware virtual machine with the following steps:
+A disk can be added to a VMware or Red Hat Virtualization virtual machine with the following steps:
 
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the target virtual machine.
